<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/user_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Welcome, [User]!"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/logout"
        android:layout_width="188dp"
        android:layout_height="66dp"
        android:layout_marginTop="104dp"
        android:backgroundTint="@color/blue"
        android:text="@string/logout"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_details" />

    <Button
        android:id="@+id/change_password"
        android:layout_width="188dp"
        android:layout_height="66dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/blue"
        android:text="@string/change_password"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/logout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/logout"
        app:layout_constraintTop_toBottomOf="@+id/logout" />

    <Button
        android:id="@+id/help"
        android:layout_width="188dp"
        android:layout_height="66dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/blue"
        android:text="@string/help"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/change_password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/change_password"
        app:layout_constraintTop_toBottomOf="@+id/change_password" />

    <Button
        android:id="@+id/about"
        android:layout_width="188dp"
        android:layout_height="66dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/blue"
        android:text="@string/about_us"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/change_password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/change_password"
        app:layout_constraintTop_toBottomOf="@+id/help" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        app:itemIconTint="@color/blue"
        app:itemTextColor="@color/blue"
        app:menu="@menu/bottom_navigation_menu"
        app:labelVisibilityMode="labeled"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
